--- a/SVG/course/text/index.html
+++ b/SVG/course/text/index.html
@@ -3,9 +3,13 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<svg width="100%" height="100%" version="1.1"
-xmlns="http://www.w3.org/2000/svg">
-    <text>这是一段文本</text>
-</svg>
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+            <path id="path1" d="M75,20 a1,1 0 0,0 100,0" />
+        </defs>
+        <text x="0" y="15" fill="red">
+            <textPath xlink:href="#path1">I love SVG I love SVG</textPath>
+        </text>
+    </svg>
 </body>
-</html
+</html>
